--- a/index.html
+++ b/index.html
@@ -1,47 +1,32 @@
 <html>
     <head>
-        <title>
-            Pull Workout - 2
-        </title>
+        <link href="index.css" rel = "stylesheet"/>
     </head>
     <body>
-        <div class = "header1">
-            <h1>Pull Workout - 2</h1>
-        </div>
+        <div id="card">
+            <div id="card-inside">
+              <div class="wrap">
+                <p>Hey son,</p>
+                <p>I lost the message inside the card 2 times.. and i realsied i am slow at this :'( </p>
+                <p>Listen kid, I want you to be the happiest today.. and i suck at making people happy..This is probably the only gift i can give you, my word..</p>
+                <p>I will be there with you in your heart and soul whenever you seek me.
+                  I love you.
+                </p>
+                <p>always.</p>
+
+                <p class="signed">ZEF</p>
+                
+              </div>
+            </div>
         
-        <div class = "conrtainer">
-            <h2>One Arm Dumbbell Row</h2>
-            <iframe width="852" height="480" src="https://youtube.com/embed/5Th5tggtz6k?start=257&end=315" frameborder="0" allowfullscreen></iframe>
-        </div>
-
-        <div class = "conrtainer">
-            <h2>Inclined Bench Hanging Curl</h2>
-            <iframe width="852" height="480" src="https://youtube.com/embed/CLccU7tk7es?start=468&end=555" frameborder="0" allowfullscreen></iframe>
-        </div>
-
-        <div class = "conrtainer">
-            <h2>Dumbbell Pull Over</h2>
-            <iframe width="852" height="480" src="https://youtube.com/embed/5Th5tggtz6k?start=200&end=252" frameborder="0" allowfullscreen></iframe>
-        </div>
-
-        <div class = "conrtainer">
-            <h2>Hammer Curl</h2>
-            <iframe width="852" height="480" src="https://youtube.com/embed/CLccU7tk7es?start=107&end=196" frameborder="0" allowfullscreen></iframe>
-        </div>
-
-        <div class = "conrtainer">
-            <h2>Shrugs</h2>
-            <iframe width="852" height="480" src="https://youtube.com/embed/bLEjYcR9nG8?start=127&end=276" frameborder="0" allowfullscreen></iframe>
-        </div>
-
-        <div class = "conrtainer">
-            <h2>Zottman Curls</h2>
-            <iframe width="852" height="480" src="https://youtube.com/embed/QQgKtmRWKjU?start=204&end=218" frameborder="0" allowfullscreen></iframe>
-        </div>
-
-        <div class = "conrtainer">
-            <h2>Forearm Curl</h2>
-            <iframe width="852" height="480" src="https://youtube.com/embed/VuQaQ0NuQwQ?start=322&end=351" frameborder="0" allowfullscreen></iframe>
-        </div>
+            <div id="card-front">
+              <div class="wrap">
+                <h1>Happy Birthday!</h1>
+              </div>
+              <button id="open">&gt;</button>
+              <button id="close">&lt;</button>
+            </div>
+          </div>
+          <script src="index.js"></script>
     </body>
 </html>
