--- a/index.html
+++ b/index.html
@@ -3,30 +3,38 @@
         <link href="index.css" rel = "stylesheet"/>
     </head>
     <body>
-        <div id="card">
-            <div id="card-inside">
-              <div class="wrap">
-                <p>Hey son,</p>
-                <p>I lost the message inside the card 2 times.. and i realsied i am slow at this :'( </p>
-                <p>Listen kid, I want you to be the happiest today.. and i suck at making people happy..This is probably the only gift i can give you, my word..</p>
-                <p>I will be there with you in your heart and soul whenever you seek me.
-                  I love you.
-                </p>
-                <p>always.</p>
-
-                <p class="signed">ZEF</p>
-                
+        <div class="birthdayCard">
+            <div class="cardFront">
+              <div class="front-text">
+              <h3 class="happy">HAPPY</h3>
+              <h2 class="bday">BIRTHDAY</h2> 
+              <h3 class="toyou">to you!</h3>  
+              </div>
+              <div class="wrap-deco">
+            <div class="decorations"></div>
+            <div class="decorationsTwo"></div>
+              </div> 
+                <div class="wrap-decoTwo">
+            <div class="decorations"></div>
+            <div class="decorationsThree"></div>
+              </div>
+              <div class="plate">
+                <div class="cake"></div>
+                <div class="flame"></div>
+              </div>
+            </div>  
+              <div class="cardInside">
+                 <div class="inside-text">
+              <h3 class="happy">HAPPY</h3>
+              <h2 class="bday">BIRTHDAY</h2> 
+              <h3 class="toyou">to you!</h3>  
+              </div>
+                <div class="wishes">
+                <p>Dear Friend,</p>
+                <p>Happy birthday!! I hope your day is filled with lots of love and laughter! May all of your birthday wishes come true.</p>
+                <p class="name">xxx</p>
+                </div>
               </div>
             </div>
-        
-            <div id="card-front">
-              <div class="wrap">
-                <h1>Happy Birthday!</h1>
-              </div>
-              <button id="open">&gt;</button>
-              <button id="close">&lt;</button>
-            </div>
-          </div>
-          <script src="index.js"></script>
     </body>
 </html>
