--- a/index.html
+++ b/index.html
@@ -1,6 +1,7 @@
 <html>
     <head>
         <link href="index.css" rel = "stylesheet"/>
+        <title>Happy Birthday</title>
     </head>
     <body>
         <div class="birthdayCard">
